# airdefence

./: .dockerignore  .gitignore  AIR_DEFENSE_GAME_SUMMARY.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  build-air-defense.bat  build-console.bat  build-gui.bat  docker-compose.yml  docker-run.sh  docker-test.sh  radar_console  run-air-defense.bat  run-console.bat  run-game.bat  run-web-server.bat  run-web.bat
apps/air_defense_game/: ballistics.cpp  ballistics.hpp  battery_controller.cpp  battery_controller.hpp  game_config.hpp  game_hud.cpp  game_hud.hpp  game_simulator.cpp  game_simulator.hpp  interceptor.cpp  interceptor.hpp  main.cpp  main_debug.cpp  threat_world.cpp  threat_world.hpp
apps/radar_console/: main.cpp
apps/radar_sim/: game_sensor.hpp  main.cpp
apps/tests/: test_integration.cpp  test_system.cpp  test_unit.cpp
core/include/radar/: radar_engine.hpp  radar_physics.hpp  sensor_feed.hpp  simulated_world.hpp  types.hpp
core/src/: radar_engine.cpp  simulated_world.cpp
docker/: entrypoint.sh
docs/: AIR_DEFENSE.md  DOPPLER.md  PHYSICS.md  SENSORS.md  UNREAL.md
embed/: README.md
web/: index.html
web/js/: game.js  radar-engine.js
